add agents methods
